WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51240
[Chromium][Skia] Border with a color with alpha != 1 breaks webkit gradient on skia
https://bugs.webkit.org/show_bug.cgi?id=51240
Summary
[Chromium][Skia] Border with a color with alpha != 1 breaks webkit gradient o...
Hajime Morrita
Reported
2010-12-17 02:22:05 PST
From
http://code.google.com/p/chromium/issues/detail?id=48278
Attachments
Patch
(7.53 KB, patch)
2010-12-17 03:13 PST
,
Hajime Morrita
jamesr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2010-12-17 03:13:28 PST
Created
attachment 76862
[details]
Patch
Adam Langley
Comment 2
2010-12-17 09:32:33 PST
(Note: I am not a WebKit reviewer. You also need an r+ from a real reviewer.) LGTM
Nico Weber
Comment 3
2010-12-17 09:41:50 PST
I believe senorblanco wrote this code. I don't quite understand why the patch works (it looks like setFillColor() still sets the gradient to NULL), but since the layout test passes and agl says it's ok, this is my fault and not the patch's :-)
Adam Langley
Comment 4
2010-12-17 10:32:54 PST
(In reply to
comment #3
)
> since the layout test passes
Yes, I largely defer to the reality of layout tests when evaluating correctness!
Hajime Morrita
Comment 5
2010-12-17 19:16:43 PST
So could any kind reviewer give r+ to this ? (In reply to
comment #3
)
> I don't quite understand why the patch works (it looks like setFillColor() still sets the gradient to NULL), but since the layout test passes and agl says it's ok, this is my fault and not the patch's :-)
What wrong here is, in my understanding, not the fill code but the gradient code. The gradient rendering refers color value which is set by setFillColor(), and uses the alpha component of that color to make things transparent. So setFillColor() and setFillGradient() weren't mutually exclusive, regardless they should be. Actually there are some confusions around how the transparency of each pixel is determined: we have State::m_alpha and State::m_fillColor on the chromium land, and have layers, blitters and shaders in the Skia land...
James Robinson
Comment 6
2010-12-20 16:56:31 PST
Comment on
attachment 76862
[details]
Patch OK
Hajime Morrita
Comment 7
2010-12-20 20:32:56 PST
Committed
r74386
: <
http://trac.webkit.org/changeset/74386
>
Hajime Morrita
Comment 8
2010-12-20 20:37:34 PST
(In reply to
comment #6
)
> (From update of
attachment 76862
[details]
) > OK
Landed. thank you for your r+!
WebKit Review Bot
Comment 9
2010-12-20 20:55:52 PST
http://trac.webkit.org/changeset/74386
might have broken Qt Linux Release The following tests are not passing: fast/gradients/gradient-after-transparent-border.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug